style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

html,
body {
  font-family: "Poppins", sans-serif;
  margin: 0;
}

body {
  background: white;
}

/* Header section */

.header-section {
  display: flex;
  justify-content: space-between;
}

.header-content {
  width: 100%;
  margin-left: 2rem;
  margin-right: 3rem;
}

.header-content h2 {
  font-size: 24px;
  font-weight: 200;
  margin-top: 0;
  color: #2e2d2d;
}

.delivery-loc {
  display: flex;
  justify-content: space-between;
}

.cities-list {
  font-size: 15px;
  font-weight: 400;
  color: grey;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  height: 180px;
  width: 180px;
}

.icon {
  height: 24px;
  display: none;
}

.dishes {
  width: 100%;
  height: 85vh;
}
.header-cities > a:nth-child(odd) {
  font-weight: bold;
}
.header-cities > a:nth-child(even) {
  font-weight: 400;
}
.header-cities > a {
  text-decoration: none;
  color: grey;
  font-size: 18px;
  margin-right: 0.5rem;
}
@media (max-width: 700px) {
  html,
  body {
    font-size: 18px;
    box-sizing: border-box;
  }

  .logo {
    height: 100px;
    width: 130px;
  }
  .icon {
    height: 24px;
    display: block;
    background: #000;
  }
  .navLinks {
    display: none;
  }
  .dishes {
    display: none;
  }
  .header-content .question-loop {
    margin-top: 0;
    font-size: 20px;
  }
  .header-content h2 {
    font-size: 14px;
  }
  .delivery-loc {
    display: block;
    gap: 10px;
    height: 100px;
    width: 280px;
    font-size: 14px;
  }
  .location-input {
    border: 1px grey solid;
    outline: none;
    height: 6px;
  }
  .delivery-loc .food-btn {
    margin-top: 5px;
    margin-bottom: 5px;
    margin-left: 100px;
    padding: 0.5rem 1rem;
    font-size: 14px;
  }
  .header-cities {
    width: 320px;
  }
  .header-cities > a {
    font-size: 12px;
  }
  .cities-list {
    font-size: 13px;
    line-height: 0.8;
  }
}

.login-btn {
  background: none;
  border: none;
  font-size: 16px;
  font-weight: bold;
  margin-right: 1.5rem;
  cursor: pointer;
}

.login-btn:hover {
  color: #fc8019;
}

.signup-btn {
  background: black;
  border: none;
  color: white;
  font-size: 16px;
  font-weight: bold;
  padding: 0.75rem 1.5rem;
  cursor: pointer;
}

a {
  text-decoration: none;
  color: grey;
  font-size: 16px;
  margin-right: 0.5rem;
}

.location-input {
  font-size: 18px;
  padding: 1rem;
  width: 100%;
  border: 1px grey solid;
  outline: none;
}

.location-input:focus {
  border-color: #fc8019;
}

.food-btn {
  font-size: 18px;
  font-weight: bold;
  background: #fc8019;
  color: white;
  border: none;
  padding: 1rem 2rem;
  text-wrap: nowrap;
  cursor: pointer;
}

.question-loop {
  font-size: 36px;
  font-weight: bolder;
  margin-bottom: 0;
  color: #0b0808;
}

.question-loop span::after {
  content: "Hungry?";
  opacity: 1;
  transition: opacity 1s ease-in-out;
  animation: animate infinite 6s;
}

@keyframes animate {
  0% {
    content: "Hungry?";
  }
  35% {
    content: "Unexpected guests?";
  }
  50% {
    content: "Cooking gone wrong?";
  }
  65% {
    content: "Movie marthon?";
  }
  80% {
    content: "Game night?";
  }
  100% {
    content: "Late night at office?";
  }
}

/* App info section */
.order-flow {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 6rem;
  background: #2b1e16;
}

.order-content {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 300px;
  color: white;
  margin-left: 2rem;
  margin-right: 2rem;
}

.no-min-order {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.no-min-order img {
  width: 105px;
  height: 199px;
  margin-top: 2px;
}

.no-min-order h3 {
  margin-bottom: 0;
}

.no-min-order p {
  font-size: 14px;
  color: #d7ac92;
}

.live-track-order {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.live-track-order img {
  width: 105px;
  height: 199px;
  margin-top: 9px;
}

.live-track-order h3 {
  margin-bottom: 0;
}

.live-track-order p {
  font-size: 14px;
  color: #d7ac92;
}

.fast-order {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.fast-order img {
  width: 105px;
  height: 100%;
  margin-top: 42px;
}

.fast-order h3 {
  margin-bottom: 0;
}

.fast-order p {
  font-size: 14px;
  color: #d7ac92;
}

@media (max-width: 700px) {
  .order-flow {
    width: 366px;
    padding-bottom: 22rem;
  }
  .order-content {
    display: block;
    width: 100%;
    padding-top: 0;
    margin-top: 0;
  }
  .no-min-order {
    align-items: flex-start;
    padding-left: 1rem;
  }

  .no-min-order img {
    width: 80px;
    height: 120px;
    margin-top: 2px;
    padding-left: 5rem;
  }

  .no-min-order h3 {
    font-size: 18px;
    padding-left: 2rem;
  }

  .no-min-order p {
    font-size: 12px;
    padding-left: 1rem;
    color: #d7ac92;
  }

  .live-track-order img {
    width: 80px;
    height: 120px;
    margin-top: 2px;
  }

  .live-track-order h3 {
    font-size: 18px;
  }

  .live-track-order p {
    font-size: 12px;
    color: #d7ac92;
  }

  .fast-order img {
    width: 80px;
    height: 120px;
    margin-top: 2px;
  }

  .fast-order h3 {
    font-size: 18px;
  }

  .fast-order p {
    font-size: 12px;
    color: #d7ac92;
  }
}

/* Download Info section */

.download-info {
  display: flex;
  justify-content: space-between;
  height: 570px;
  margin-left: 2rem;
  margin-right: 2rem;
}

.download-info-content h2 {
  width: 400px;
  font-size: 36px;
  font-weight: 600;
  padding-top: 140px;
  margin-top: 0;
  margin-bottom: 0;
}

.download-info-content p {
  width: 400px;
  font-size: 18px;
  color: grey;
  padding-bottom: 26px;
  padding-right: 2px;
}

.download-info-content a {
  padding-right: 6px;
}
/* ... */

